# tracing-async-trait-bug-repro

./: Cargo.toml  expanded.rs
src/: main.rs
