[package]
name = "bug-repro"
version = "0.1.0"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.13"
tracing-futures = "0.2.4"
async-trait = "0.1.30"

#[patch.crates-io]
#tracing = { path = "../tracing/tracing" }
#tracing-futures = { path = "../tracing/tracing-futures" }
